[package]
name = "gluesql-logic-test"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gluesql = { version = "0.17", git = "https://github.com/gluesql/gluesql.git", rev = "6cd4003b437dee3ffa70298a40016e742d1e9c79" }
# depend on gluesql-core
chrono = "=0.4.41"
macros = { package = "test-macros", path = "../test-macros" }
rusqlite = { version = "0.28", features = ["column_decltype"] }
sqllogictest = "0.28.3"
thiserror = "1"
tracing = "0.1"
sqlparser = { version = "0.52", features = ["visitor"] }
